--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,8 @@ add_executable(hello main.c)
 add_executable(daytime daytime.c)
 add_executable(daytimeserver daytimeserver.c)
 
+add_executable(echo echo.c)
+add_executable(echoserver echoserver.c)
+
 add_executable(size size.c)
 add_executable(byteorder byteorder.c)
