--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,22 @@ add_library(host SHARED
         android/libhost/include/host/copyFile.h)
 
 ## end c from android source
+
+## add lsusb
+
+add_executable(lsusb lsusb.c)
+
+find_package(CURL REQUIRED)
+message(LibCurl ${CURL_INCLUDE_PATH})
+message(LibCurl ${CURL_LIBRARIES})
+find_path(LIBUSB_INCLUDE_DIR
+        NAMES libusb.h
+        PATH_SUFFIXES "include" "libusb" "libusb-1.0")
+message("LIBUSB_INCLUDE_DIR: " ${LIBUSB_INCLUDE_DIR})
+find_library(LIBUSB_LIBRARY
+        NAMES usb-1.0
+        PATH_SUFFIXES "lib" "lib32" "lib64")
+message("LIBUSB_LIBRARY: " ${LIBUSB_LIBRARY})
+target_include_directories(lsusb PUBLIC ${LIBUSB_INCLUDE_DIR} ${CURL_INCLUDE_PATH})
+target_link_libraries(lsusb ${LIBUSB_LIBRARY} ${CURL_LIBRARIES})
+## add lsusb end
