--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,3 +49,5 @@ add_executable(hello_class
         cpp/hello_class.cpp)
 add_executable(vector_for_each
         cpp/vector_for_each.cpp)
+
+add_subdirectory(linux)
