--- a/threads/CMakeLists.txt
+++ b/threads/CMakeLists.txt
@@ -5,6 +5,8 @@ add_executable(producer_consumer producer_consumer.cpp)
 
 add_executable(pipe_ipc pipe_ipc.c)
 
+add_executable(list_structure list_structure.c list_structure_main.cpp)
+
 #find_library(pthread)
 #
 #target_link_libraries(threads_api
